@@ -1,6 +1,6 @@
 # fmise_back_end 后端使用指南
 
-
+最终版：2024.1.12
 
 ## 数据类型
 
@@ -391,4 +391,215 @@ http://localhost:8080/menu/menus-by-collect/1
 #### 3.3 DELETE: 删除用户（后端自用）
 
 路径：http://localhost:8080/user/delete-user/{userId}
+
+
+
+## 部署说明
+
+### 0. 打包
+
+进入每一个子模块，进行package操作，并根据生成的jar包的名字，动态修改dockerfile中的指令
+
+（生成的jar包在target目录下）
+
+```dockerfile
+#如gateway子模块的dockerfile
+COPY {生成jar包的名字} gateway-service-0.0.1-SNAPSHOT.jar
+```
+
+### 1. nacos
+
+#### docker启动:
+
+```
+docker pull nacos/nacos-server
+docker network create nacos_network
+docker run --name nacos -d -p 8848:8848 --network nacos_network -e MODE=standalone nacos/nacos-server
+```
+
+#### 访问控制台：
+
+```
+localhost:8848/nacos
+```
+
+
+
+### 2. Sentinel
+
+#### Sentinel下载:
+
+下载地址：https://github.com/alibaba/Sentinel/releases
+
+下载版本：1.6.3
+
+（下载sentinel-dashboard-1.6.3.jar）
+
+#### Sentinal启动：
+
+##### 1. 创建image
+
+进入fmise_back_end文件夹
+
+```
+docker build -t Sentinal .
+```
+
+如果报错 java.lang.IllegalStateException: Cannot load configuration class: com.alibaba.csp.sentinel.dashboard，可能是因为java版本过高。修改当前文件夹（fmise_back_end）下的DockerFile：
+
+**（基本不可能出现，因为镜像已经指定了java版本）**
+
+```
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/sentinel-dashboard-1.6.3.jar", "-Dserver.port=8080", "-Dcsp.sentinel.app.type=1", "-Dcsp.sentinel.dashboard.server=localhost:8080", "-Dproject.name=sentinel-dashboard"]
+```
+
+##### 2. 创建container并启动
+
+```
+docker run -p 8080:8080 -d --name sentinal-service Sentinal:latest
+```
+
+#### 访问控制台
+
+```
+localhost:8080
+```
+
+### 3. 服务启动
+
+#### 3.1 register
+
+进入：\fmise_back_end\register
+
+##### 构建image
+
+`````
+docker build -t register .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8090:8090 -d --name register-service register:latest
+```
+
+#### 3.2 gateway
+
+进入：\fmise_back_end\gateway
+
+##### 构建image
+
+`````
+docker build -t gateway .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8083:8083 -d --name gateway-service gateway:latest
+```
+
+#### 3.3 food-service
+
+进入：\fmise_back_end\food-service
+
+##### 构建image
+
+`````
+docker build -t food-service .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8085:8085 -d --name food-service food-service:latest
+```
+
+
+
+进入：\fmise_back_end\food-service2
+
+##### 构建image
+
+`````
+docker build -t food-service2 .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8082:8082 -d --name food-service2 food-service2:latest
+```
+
+#### 
+
+#### 3.4 menu-service
+
+进入：\fmise_back_end\menu-service
+
+##### 构建image
+
+`````
+docker build -t menu-service .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8086:8086 -d --name menu-service menu-service:latest
+```
+
+
+
+进入：\fmise_back_end\menu-service2
+
+##### 构建image
+
+`````
+docker build -t menu-service2 .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8087:8087 -d --name menu-service2 menu-service2:latest
+```
+
+
+
+#### 3.5 user-service
+
+进入：\fmise_back_end\user-service
+
+##### 构建image
+
+`````
+docker build -t user-service .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8188:8188 -d --name user-service user-service:latest
+```
+
+
+
+#### 3.6 chat-service
+
+进入：\fmise_back_end\chat-service
+
+##### 构建image
+
+`````
+docker build -t chat-service .
+`````
+
+##### 创建container并启动
+
+```
+docker run -p 8180:8180 -d --name chat-service chat-service:latest
+```
+
+
 
